# wordle_tang_bowen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordle_bt2683/: __init__.py  wordle.py
tests/: test_wordle_bt2683.py  test_wordle_core.py
