[tool.poetry]
name = "wordle_bt2683"
version = "0.1.0"
description = ": Wordle helper functions for QMSS_G5072"
authors = ["Bowen Tang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
