[tool.poetry]
name = "wordle_bt2683"
version = "0.1.0"
description = ": Wordle helper functions for QMSS_G5072"
authors = ["Bowen Tang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "sphinx (>=8,<9)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "myst-parser (>=4.0.1,<5.0.0)",
    "sphinx-autoapi (>=3.6.1,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
